# client

./: .gitignore  .gitignore.bak  CMakeLists.txt  Makefile  TdTest.pri  TdTest.pro  TdTest.sln  TdTest.vcxproj  TdTest.vcxproj.filters  cmake_install.cmake  cmdthread.cpp  cmdthread.h  loger.cpp  loger.h  logout.cpp  logout.h  moc_cmdthread.cpp  moc_loger.cpp  moc_tdclient.cpp  moc_telegramthread.cpp  td_example.cpp  tdclient - 副本.cpp  tdclient.cpp  tdclient.h  telegramthread.cpp  telegramthread.h  utility.h
tdclient/jjj/j/: tdclient.cpp
tdclient/join/: join_chartid.txt  join_chartid.txt.bak  tdclient.cpp
tdclient/joinchart/: tdclient.cpp
tdclient/sendtvt/: tdclient.cpp
